feat: infinite scroll observer 적용

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,9 @@
             />
           </label>
           <section id="search-list-section">
-            <ul id="search-list"></ul>
+            <ul id="search-list">
+              <li id="search-lastitem"></li>
+            </ul>
           </section>
         </form>
         <section id="course-list-section">
