--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
           </label>
           <section id="search-list-section">
             <ul id="search-list">
-              <li id="search-lastitem"></li>
+              <!-- <li id="search-lastitem"></li> -->
             </ul>
           </section>
         </form>
@@ -34,6 +34,7 @@
     </main>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
     <script type="module" src="./js/app.js"></script>
   </body>
 </html>
