--- a/client/index.html
+++ b/client/index.html
@@ -22,9 +22,7 @@
             />
           </label>
           <section id="search-list-section">
-            <ul id="search-list">
-              <!-- <li id="search-lastitem"></li> -->
-            </ul>
+            <ul id="search-list"></ul>
           </section>
         </form>
         <section id="course-list-section">
