feat: 페이지 라우팅 및 스타일 적용

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/searchPage.css" />
-    <title>인프런 과제</title>
+    <title>인프런 메인페이지</title>
   </head>
   <body>
     <main>
