--- a/client/src/html/coursePage.html
+++ b/client/src/html/coursePage.html
@@ -23,6 +23,6 @@
     </section>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script type="module" src="../js/core/coursePage.js"></script>
+    <script type="module" src="../js/page/coursePage.js"></script>
   </body>
 </html>
