--- a/client/src/index.html
+++ b/client/src/index.html
@@ -26,7 +26,9 @@
           </section>
         </form>
         <section id="course-list-section">
-          <ul id="course-list"></ul>
+          <ul id="course-list">
+            <li id="course-last-item"></li>
+          </ul>
         </section>
       </div>
     </main>
